(Osmose.java) Added function eliminateTwinMap() that loops around distribution maps and gather together the maps that are the same (i.e. associated to same csv file). Previously as soon as a new block was defined in the area-maps config file, it was assumed it was a new map.
git-svn-id: https://subversion.renater.fr/authscm/barrier.n/svn/osmose/trunk@447 45b28200-7c74-4d1a-96bc-342942c5875a